# SecondSemester

./: .gitgnore  CMakeLists.txt
GI2/Assembler/: test
GI2/Übung/1/: 8  8.c
GI2/Übung/2/: 1  Übung 3
GI2/Übung/3/: Übung 3
GI2/Übung/4/: Uebung4
GI2/Übung/7/: assembly
LMKI/Notes/: 01.aux  01.fdb_latexmk  01.fls  01.tex
PG2/Vorlesung/: .test.c.swp
PG2/Vorlesung/03/: env  env.cpp  streams  streams.cpp  strings  strings.cpp
PG2/Vorlesung/04/: assert  assert.cpp  fault  fault.cpp  fstreams  fstreams.cpp
PG2/Vorlesung/05/: rechnung  rechnung.cpp  rechnung.txt  ref.cpp  teilnehmer  teilnehmer.cpp  todo  todo.cpp  todos.txt
PG2/Vorlesung/06/: .Makefile.swp  Makefile  overload.c
PG2/Vorlesung/07/: .strapp.cpp.swp  namespace  namespace.cpp  strapp  strapp.cpp
PG2/Vorlesung/08/: myStrings  myStrings.cpp
PG2/Vorlesung/09/: list.cpp  list.h  todo.cpp
PG2/Vorlesung/11 (Relevant für Klausur)/: string_vector.cpp  sv  vec3  vec3.cpp
PG2/Vorlesung/12/: enums.cpp
PG2/Vorlesung/13/: enums
PG2/Vorlesung/15/: .xval1.cpp.swp  Makefile  demo  dyn_arr.cpp  frage.cpp  xval1.cpp  xval2.cpp
PG2/Vorlesung/16/: image-demo  image.cpp  makefile
PG2/Vorlesung/oop/: a.out  main.cpp
PG2/Übungen/1/: Ü1_2  Ü1_2.c  Ü1_2.s
PG2/Übungen/10/: exec  tier.cpp
PG2/Übungen/11/: auf1  auf1.cpp  smart_pointer  smart_pointer.cpp
PG2/Übungen/12/: .match.cpp.swp  ls.cpp  match  match.cpp  myls
PG2/Übungen/2/: .meeting.c.swp  cat  cat.c  meeting  meeting.c  meeting2  meeting2.c  zwei.txt
PG2/Übungen/3/: .seq.cpp.swp  1  1.cpp  2.cpp  generator  generator.cpp  seq  seq.cpp  to-debug
PG2/Übungen/4/: db.txt  tagdb  tagdb.cpp  tagdbconsole.cpp
PG2/Übungen/5/: cat  cat.cpp  test.txt
PG2/Übungen/6/: dynamicArray  dynamic_array.cpp  makefile  myVector.cpp  myVector.h  todo
PG2/Übungen/8/: readVariables  readVariables.cpp
PG2/Übungen/9.5/: ass_arr.cpp  ass_arr.h  debug  (+5 more)
PGKI/vl09/: timer.ipynb  vl09_0_main.ipynb  vl09_1_intro.ipynb  vl09_2_arrays.ipynb  vl09_3_operations.ipynb
PGKI/vl10/: vl10_0_main.ipynb  vl10_4_shapes.ipynb  vl10_5_broadcasting.ipynb  vl10_6_advanced_indexing.ipynb  vl10_7_matmul.ipynb  ztransform.ipynb
PGKI/vl11/: 01_intro.ipynb  02_simple_plots.ipynb  03_figures.ipynb  figure.py
PGKI/vl12/: 01_intro.ipynb  02_ds.ipynb  03_io.ipynb  04_indexing.ipynb  05_application.ipynb
(+126 files in other folders)
